[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[flake8]
ignore =
  # W503 - line break before binary operator
  # https://www.python.org/dev/peps/pep-0008/#should-a-line-break-before-or-after-a-binary-operator
  W503,
exclude =
    __pycache__,
    .git,
    build,
    dist,
    docs,
    env,
    old,
    venv,
max-line-length = 128
exit-zero = True
show-source = True
statistic = True
builtins =
  basestring,
  file,
  raw_input,
  unicode,
  xrange,
import-order-style = pycharm
application-import-names =
  liveproxy,
